--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
                 <version>1.2.3</version>
                 <optional>true</optional>
             </dependency>
+    
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>5.8.2</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     
