GPT模型实现注解配合Spring发送请求

--- a/chatgpt-client-spring/pom.xml
+++ b/chatgpt-client-spring/pom.xml
@@ -21,6 +21,22 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>xyz.openai</groupId>
+            <artifactId>chatgpt-client</artifactId>
+        </dependency>
     </dependencies>
-
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
