--- a/chatgpt-client-example/pom.xml
+++ b/chatgpt-client-example/pom.xml
@@ -3,25 +3,34 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.9</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>xyz.openai</groupId>
+        <artifactId>chatgpt</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
-    <groupId>xyz.openai</groupId>
+    
     <artifactId>chatgpt-client-example</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>chatgpt-client-example</name>
     <description>Demo project for Spring Boot</description>
+    
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.7.8</version>
         </dependency>
         
+        <dependency>
+            <groupId>xyz.openai</groupId>
+            <artifactId>chatgpt-client-spring</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+    
     </dependencies>
     
     <build>
@@ -29,7 +38,18 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.8</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>
+                                repackage
+                            </goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
+        
         </plugins>
     </build>
 
