--- a/chatgpt-client/pom.xml
+++ b/chatgpt-client/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-   
+    
     <parent>
         <groupId>xyz.openai</groupId>
         <artifactId>chatgpt</artifactId>
@@ -10,10 +10,11 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     
-    <artifactId>chatgpt-client</artifactId>
     <version>${reversion}</version>
+    <artifactId>chatgpt-client</artifactId>
     <name>chatgpt-client</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Client for chatgpt</description>
+    
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -35,18 +36,5 @@
             <artifactId>hutool-http</artifactId>
         </dependency>
     </dependencies>
-    
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
