--- a/chatgpt-client-example/pom.xml
+++ b/chatgpt-client-example/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>xyz.openai</groupId>
         <artifactId>chatgpt</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${reversion}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
     <artifactId>chatgpt-client-example</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>${reversion}</version>
     <name>chatgpt-client-example</name>
     <description>Demo project for Spring Boot</description>
     
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>xyz.openai</groupId>
             <artifactId>chatgpt-client-spring</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.2.0</version>
         </dependency>
     
     </dependencies>
