--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     
     <groupId>xyz.openai</groupId>
     <artifactId>chatgpt</artifactId>
-    <version>${reversion}</version>
+    <version>1.3.0</version>
     
     <name>chatgpt</name>
     <description>ChatGPT client</description>
@@ -27,13 +27,13 @@
             <dependency>
                 <groupId>xyz.openai</groupId>
                 <artifactId>chatgpt-client</artifactId>
-                <version>${reversion}</version>
+                <version>1.3.0</version>
             </dependency>
             
             <dependency>
                 <groupId>xyz.openai</groupId>
                 <artifactId>chatgpt-client-spring</artifactId>
-                <version>${reversion}</version>
+                <version>1.3.0</version>
             </dependency>
             
             <dependency>
